// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Samples List preferred storage: ephemeral snapshot 1`] = `
<div
  className="pf-v6-c-panel"
>
  <div
    className="pf-v6-c-panel__header"
  >
    <h3
      className="pf-v6-c-title pf-m-h3"
      data-ouia-component-id="OUIA-Generated-Title-4"
      data-ouia-component-type="PF6/Title"
      data-ouia-safe={true}
    >
      Select a Sample
    </h3>
    <div
      className="pf-v6-c-content"
      data-ouia-component-id="OUIA-Generated-Content-7"
      data-ouia-component-type="PF6/Content"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      <small
        className="pf-v6-c-content--small"
        data-ouia-component-id="OUIA-Generated-Content-8"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe={true}
        data-pf-content={true}
      >
        Select a sample to create your first workspace.
      </small>
    </div>
  </div>
  <div
    className="pf-v6-c-panel__main"
    style={
      {
        "--pf-v6-c-panel__main--MaxHeight": undefined,
      }
    }
  >
    <div
      className="pf-v6-c-panel__main-body"
    >
      <div>
        <span>
          Samples List Toolbar
        </span>
        <span
          data-testid="isTemporary"
        >
          true
        </span>
        <button
          onClick={[Function]}
        >
          Toggle isTemporary
        </button>
      </div>
    </div>
    <div
      className="pf-v6-c-panel__main-body"
    >
      <div
        data-testid="samples-list-gallery"
      >
        <div>
          Samples List Gallery
        </div>
        <div
          data-testid="sample-card"
        >
          Quarkus REST API
          <button
            onClick={[Function]}
          >
            Select Sample
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Samples List preferred storage: non-ephemeral snapshot 1`] = `
<div
  className="pf-v6-c-panel"
>
  <div
    className="pf-v6-c-panel__header"
  >
    <h3
      className="pf-v6-c-title pf-m-h3"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF6/Title"
      data-ouia-safe={true}
    >
      Select a Sample
    </h3>
    <div
      className="pf-v6-c-content"
      data-ouia-component-id="OUIA-Generated-Content-1"
      data-ouia-component-type="PF6/Content"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      <small
        className="pf-v6-c-content--small"
        data-ouia-component-id="OUIA-Generated-Content-2"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe={true}
        data-pf-content={true}
      >
        Select a sample to create your first workspace.
      </small>
    </div>
  </div>
  <div
    className="pf-v6-c-panel__main"
    style={
      {
        "--pf-v6-c-panel__main--MaxHeight": undefined,
      }
    }
  >
    <div
      className="pf-v6-c-panel__main-body"
    >
      <div>
        <span>
          Samples List Toolbar
        </span>
        <span
          data-testid="isTemporary"
        >
          false
        </span>
        <button
          onClick={[Function]}
        >
          Toggle isTemporary
        </button>
      </div>
    </div>
    <div
      className="pf-v6-c-panel__main-body"
    >
      <div
        data-testid="samples-list-gallery"
      >
        <div>
          Samples List Gallery
        </div>
        <div
          data-testid="sample-card"
        >
          Quarkus REST API
          <button
            onClick={[Function]}
          >
            Select Sample
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
